web-infras/parser/tests/fixtures/babel/es2017/async-functions/await-inside-parameters-of-nested-arrow-function/output.txt
[SyntaxError]: await expression can not used in parameter list (2,8)
2|  (x = await 2) => {};
 |      ^
